# webbluetooth

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CMakeLists.txt  README.md  binding-options.js  circle.yml  documentation.md  gulpfile.js  hierarchy.html  index.html  index.js  modules.html  package-lock.json  package.json  tsconfig.json  typedoc.json  webpack.config.js
.github/: dependabot.yml
assets/: highlight.css  navigation.js  search.js
classes/: Bluetooth.html  bluetooth.Bluetooth.html  bluetooth.BluetoothImpl.html  characteristic.BluetoothRemoteGATTCharacteristic.html  characteristic.BluetoothRemoteGATTCharacteristicImpl.html  descriptor.BluetoothRemoteGATTDescriptor.html  descriptor.BluetoothRemoteGATTDescriptorImpl.html  device.BluetoothDevice.html  device.BluetoothDeviceImpl.html  server.BluetoothRemoteGATTServer.html  server.BluetoothRemoteGATTServerImpl.html  service.BluetoothRemoteGATTService.html  service.BluetoothRemoteGATTServiceImpl.html
deno_dist/: README.md  adapters.ts  bindings.ts  bluetooth.ts  characteristic.ts  common.ts  gatt.ts  index.bun.ts  interfaces.ts  mod.ts  package.json
docs/: globals.html  index.html  modules.html
enums/: adapters_simpleble.AddressType.html
examples/: eddystone.js  eddystone.ts  heartrate.js  heartrate.ts  list-adapters.js  list.js  list.ts  microbits.js  scan.ts  selector.js
firmware/: MICROBIT.hex  codal.json  main.cpp
functions/: adapters_simpleble.getAdapters.html  adapters_simpleble.isEnabled.html  bluetooth.getAdapters.html
lib/: adapter.cpp  (+21 more)
(+148 files in other folders)
